--- a/slides/pugs/SGAN_An_Alternative_Training_of_Generative_Adversarial_Networks.pug
+++ b/slides/pugs/SGAN_An_Alternative_Training_of_Generative_Adversarial_Networks.pug
@@ -19,7 +19,7 @@ section#SGAN_An_Alternative_Training_of_Generative_Adversarial_Networks
     .item3
       .text
         h1 新規性・結果・なぜ通ったか？
-        p adversarial pairs (G1,D1),...,(GN,DN)を学習し， G0はD1,...,DNによって学習， D0はG1,...,GNによって学習させることでグローバルな一対のネットワークを学習する。
+        p adversarial pairs (G1,D1),...,(GN,DN)を学習し， G0はD1,...,DNによって学習， D0はG1,...,GNによって学習させることでグローバルな一対のネットワークを学習する．
     .item4
       .text
         h1 コメント・リンク集
